# gstreamer-manager-qt-app

./: .gitignore  CMakeLists.txt  LogRedirector.h  ManualPipelineExecutor.cpp  ManualPipelineExecutor.h  PlayerController.h  PresetPipelineExecutor.cpp  PresetPipelineExecutor.h  README.md  UdpWatcherExecutor.cpp  UdpWatcherExecutor.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
build_release/: CMakeCache.txt  cmake_install.cmake
build_release/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  deploy_GStreamerGUI_48bfb7a36e.cmake
build_release/GStreamerGUI_autogen/: deps  mocs_compilation.cpp
build_release/GStreamerGUI_autogen/6YEA5652QU/: moc_LogRedirector.cpp.d  moc_ManualPipelineExecutor.cpp.d  moc_PlayerController.cpp.d  moc_PresetPipelineExecutor.cpp.d  moc_UdpWatcherExecutor.cpp.d  moc_mainwindow.cpp.d
form/: mainwindow.ui
include/: ManualPipelineExecutor.h  PlayerController.h  PresetPipelineExecutor.h  UdpWatcherExecutor.h  mainwindow.h
src/: LogRedirector.cpp  PlayerController.cpp  PresetPipelineExecutor.cpp  mainwindow.cpp
